News in 2.5: A new interface "Session.h" is created. Methods like
Session_Open and Session_Close can be used to open and close  sessions. 
Sessions are in a stack with the current session at the top. 
Open a session = push it, close a session = pop and delete it.
If needed instances like Message, Exception, etc... are created once in all 
sessions of the stack. Only those of the top session are currently used.

News in 2.4: Two new database interfaces: "HardenedCementChemistry.h" and
"CementSolutionDiffusion.h" to be used for cement-based materials. 
New models now use these interfaces. The references used to implemente some
databases are now copied in the folder "src/Models/DataBases/References".

News in 2.3: Use of C++ compiler. Programmation is now extended to 
C++ language. Hence the use of .cpp and .hpp files is allowed. 
A new object "Exception.h" has been created to handle exception mechanisms 
such as interruption, floating point error.
In such occuring event the program handles the event, saves outputs and exits 
in a clean way.
Introduction of the curve builder "Expressions", based on the evaluation of 
mathematical expressions obtained from AnaGram (www.parsifalsoft.com). 
In this version a shared library, libbil.so, from the genuine sources of Bil
is created and installed in the machine. Linkage with other possible external 
libraries is possible. A new extension of input file ".conti" has been introduced 
so that we can load the solution from a previous calculation and continue this 
calculation while going through the initialization stage (see documention).

News in 2.2: WARNING, the outputs of FVM_ComputeIsotropicConductionMatrix()
and FVM_ComputeMassAndIsotropicConductionMatrix() have been modified see 
examples in models using these methods. New objects have been introduced: 
Views,  TextFile, CurvesFile, MatrixStorageFormat. Introduction of the curve 
builder "Evaluate", based on the evaluation of mathematical expressions 