@@ -3,11 +3,13 @@ to the Bil project (sorted alphabetically):
 
 Anais Grandclerc
 Antoine Morandeau
+Axelle Alavoine
 Emmanuel Bethier
 Haifeng Yuan
 Jean-Michel Pereira
 Jiyun Shen
 Laurent Lassabatere
+Meijie Xie
 Mickael Thiery
 Patrick Dangla
 Qiang Zeng
