@@ -1,0 +1,11 @@
+#ifndef SUPERLUMETHOD_H
+#define SUPERLUMETHOD_H
+
+
+#ifdef SUPERLULIB
+  #include "Solver.h"
+
+  extern int        SuperLUMethod_Solve(Solver_t*) ;
+#endif
+
+#endif
