@@ -1,9 +1,0 @@
-#ifndef SUPERLUMETHOD_H
-#define SUPERLUMETHOD_H
-
-
-#include "Solver.h"
-
-extern int        SuperLUMethod_Solve(Solver_t*) ;
-
-#endif
